# paperless-genie

./: .coderabbit.yaml  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bot.py  docker-compose.yml  index.html  mise.toml  mkdocs.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  cla-signatures.json  dependabot.yaml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  cla.yaml  docs.yaml  gemini-review.yml  labeler.yaml  publish.yaml  release.yaml  tag-release.yaml
.mise/tasks/: release
architecture/: index.html
deployment/: index.html
docs/: architecture.md  deployment.md  examples.md  index.md
docs/setup/: configuration.md  gemini.md  paperless.md  telegram.md
examples/: index.html
search/: search_index.json
setup/configuration/: index.html
setup/gemini/: index.html
setup/paperless/: index.html
setup/telegram/: index.html
src/paperless_genie/: __init__.py  __main__.py  agent.py  bot.py  config.py  conversation.py  paperless.py
tests/: __init__.py  conftest.py  test_agent.py  test_bot.py  test_config.py  test_conversation.py  test_paperless.py
