[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperless-genie"
version = "0.1.0"
description = "🧞 AI-powered Telegram bot for Paperless-ngx — chat with your document archive, upload and process documents, set metadata, and search — all from Telegram."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Jegors Čemisovs", email = "jegors.cemisovs@gmail.com" },
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "pyTelegramBotAPI>=4.20.0",
  "google-antigravity>=0.1.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperless_genie"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = [
  "S",   # flake8-bandit
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "PT",  # flake8-pytest-style
]
ignore = [
  "S101", # Use of assert detected (needed for testing)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105"]

[tool.mypy]
strict = true
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
