[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperless-genie"
version = "1.0.1"
description = "🧞 AI-powered Telegram bot for Paperless-ngx — chat with your document archive, upload and process documents, set metadata, and search — all from Telegram."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "Jegors Čemisovs", email = "jegors.cemisovs@gmail.com" },
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "pyTelegramBotAPI>=4.20.0",
  "google-antigravity>=0.1.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0",
  "pydantic>=2",
]

[project.urls]
Homepage = "https://jc.id.lv/paperless-genie/"
Documentation = "https://jc.id.lv/paperless-genie/"
Repository = "https://github.com/rabestro/paperless-genie"
Issues = "https://github.com/rabestro/paperless-genie/issues"
Changelog = "https://github.com/rabestro/paperless-genie/releases"

# PEP 735 dependency groups: development-only dependencies, not published as
# package extras. `uv sync` installs the `dev` group by default; add the docs
# tooling with `--group docs` (or everything with `--all-groups`).
[dependency-groups]
dev = [
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.0",
  "pre-commit>=4.0.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperless_genie"]

[tool.pytest.ini_options]
# Treat every `async def test_*` as an asyncio test without a per-test marker.
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = [
  "S",   # flake8-bandit
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "PT",  # flake8-pytest-style
  "PL",  # pylint (complexity, magic values, common mistakes)
  "RUF", # ruff-specific (incl. RUF100 unused-noqa)
  "SIM", # flake8-simplify
  "N",   # pep8-naming
  "A",   # flake8-builtins (builtin shadowing)
  "RET", # flake8-return
  "D",   # pydocstyle (docstrings; google convention below)
]
ignore = [
  "S101", # Use of assert detected (needed for testing)
  "D107", # Missing docstring in __init__ (constructor args belong in the class docstring)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# D1: test names are the documentation; docstrings on every test add noise.
# PLR2004: literal expected values in assertions are the point of a test.
"tests/*" = ["S101", "S105", "D1", "PLR2004"]

[tool.mypy]
strict = true
python_version = "3.14"
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
